<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="st_P_Connect_to_Lynus" Id="{ccc3f898-1b63-4018-92fd-e9f0a10c1350}">
    <Declaration><![CDATA[TYPE st_P_Connect_to_Lynus :
STRUCT
	Wert_1	:REAL;	
	Wert_2	:REAL;	
	Wert_3	:REAL;	
	Wert_4	:REAL;	
	Wert_5	:REAL;	
	Wert_6	:REAL;	
	Wert_7	:BOOL;	
	Wert_8	:REAL;	
	Wert_9	:REAL;	
	Wert_10	:REAL;
	Wert_11	:REAL;	
	Wert_12	:REAL;	
	Wert_13	:REAL;	
	Wert_14	:REAL;	
	Wert_15	:REAL;	
	Wert_16	:REAL;	
	Wert_17	:REAL;	
	Wert_18	:REAL;	
	Wert_19	:REAL;	
	Wert_20	:REAL;
	Wert_21	:REAL;	
	Wert_22	:REAL;	
	Wert_23	:REAL;	
	Wert_24	:REAL;	
	Wert_25	:REAL;	
	Wert_26	:REAL;	
	Wert_27	:REAL;	
	Wert_28	:REAL;	
	Wert_29	:REAL;	
	Wert_30	:REAL;
	Wert_31	:REAL;
	Wert_32	:REAL;
	Wert_33	:REAL;
	Wert_34	:REAL;
	Wert_35	:REAL;
	Wert_36	:REAL;
	Wert_37	:REAL;
	Wert_38	:REAL;
	Wert_39	:REAL;
	Wert_40	:REAL;
	Wert_41	:BOOL;
	Wert_42	:BOOL;
	Wert_43	:BOOL;
	Wert_44	:BOOL;
	Wert_45	:BOOL;
	Wert_46	:BOOL;
	Wert_47	:BOOL;
	Wert_48	:BOOL;
	Wert_49	:BOOL;
	Wert_50	:BOOL;
	Wert_51	:BOOL;
	Wert_52	:BOOL;
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>