<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="p_Datenschnittstelle_L" Id="{8286e39b-3179-4045-b777-93f04953c8e2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_Datenschnittstelle_L
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.NULL				:=0.0;
GVL.TEMP_INNEN_1		:= GVL.lynus_in.Wert_1;	
GVL.RH_INNEN_1			:= GVL.lynus_in.Wert_2;
GVL.TEMP_INNEN_2		:= GVL.lynus_in.Wert_3;
GVL.RH_INNEN_2			:= GVL.lynus_in.Wert_4;
GVL.TEMP_AUSSEN			:= GVL.lynus_in.Wert_5;
GVL.RH_AUSSEN			:= GVL.lynus_in.Wert_6;
GVL.AKTIVITAET			:= GVL.lynus_in.Wert_7;
GVL.ELEKTRO_1_Zaehler	:= GVL.lynus_in.Wert_8;
GVL.ELEKTRO_1_Leistung	:= GVL.lynus_in.Wert_9;
GVL.ELEKTRO_2_Zaehler	:= GVL.lynus_in.Wert_10;
GVL.ELEKTRO_2_Leistung	:= GVL.lynus_in.Wert_11;
GVL.ELEKTRO_3_Zaehler	:= GVL.lynus_in.Wert_12;
GVL.ELEKTRO_3_Leistung	:= GVL.lynus_in.Wert_13;
GVL.ELEKTRO_4_Zaehler	:= GVL.lynus_in.Wert_14;
GVL.ELEKTRO_4_Leistung	:= GVL.lynus_in.Wert_15;
GVL.ELEKTRO_5_Zaehler	:= GVL.lynus_in.Wert_16;
GVL.ELEKTRO_5_Leistung	:= GVL.lynus_in.Wert_17;
GVL.HEIZEN				:= GVL.lynus_in.Wert_18;
GVL.HEIZEN_E_Lesitung	:= GVL.lynus_in.Wert_19;
GVL.Wasseruhr_1			:= GVL.lynus_in.Wert_20;
GVL.Wasseruhr_2			:= GVL.lynus_in.Wert_21;
GVL.TEMP_HKLS_1			:= GVL.lynus_in.Wert_22;
GVL.TEMP_HKLS_2			:= GVL.lynus_in.Wert_23;
GVL.TEMP_HKLS_3			:= GVL.lynus_in.Wert_24;
GVL.TEMP_HKLS_4			:= GVL.lynus_in.Wert_25;
GVL.TEMP_HKLS_5			:= GVL.lynus_in.Wert_26;
GVL.TEMP_HKLS_6			:= GVL.lynus_in.Wert_27;
GVL.TEMP_HKLS_7			:= GVL.lynus_in.Wert_28;
GVL.TEMP_HKLS_8			:= GVL.lynus_in.Wert_29;

GVL.Wert_30				:= GVL.lynus_in.Wert_30;
GVL.Wert_31				:= GVL.lynus_in.Wert_31; //BA3 WP Leistung
GVL.Wert_32				:= GVL.lynus_in.Wert_32; //BA3 WP Energie Wärme
GVL.Wert_33				:= GVL.lynus_in.Wert_33; //BA3 WP Energie Kälte

GVL.lynus_out.Wert_41	:= GVL.VERSCHATTUNG_auf;
GVL.lynus_out.Wert_42	:= GVL.VERSCHATTUNG_ab;
GVL.lynus_out.Wert_43	:= GVL.ZENTRAL_LICHT_ein_EG;
GVL.lynus_out.Wert_44	:= GVL.ZENTRAL_LICHT_aus_EG;
GVL.lynus_out.Wert_45	:= GVL.ZENTRAL_LICHT_ein_OG;
GVL.lynus_out.Wert_46	:= GVL.ZENTRAL_LICHT_aus_OG;
GVL.lynus_out.Wert_47	:= GVL.B3_ZENTRAL_LICHT_ein;
GVL.lynus_out.Wert_48	:= GVL.B3_ZENTRAL_LICHT_aus;
GVL.lynus_out.Wert_49	:= GVL.B3_SCHATTUNG_auf_EG;
GVL.lynus_out.Wert_50	:= GVL.B3_SCHATTUNG_ab_EG;
GVL.lynus_out.Wert_51	:= GVL.B3_SCHATTUNG_auf_OG;
GVL.lynus_out.Wert_52	:= GVL.B3_SCHATTUNG_ab_OG;]]></ST>
    </Implementation>
    <LineIds Name="p_Datenschnittstelle_L">
      <LineId Id="59" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="28" Count="15" />
      <LineId Id="58" Count="0" />
      <LineId Id="44" Count="9" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="87" Count="2" />
      <LineId Id="78" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="67" Count="2" />
      <LineId Id="74" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="84" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="86" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>